<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/layout_background">
    <com.google.android.material.appbar.MaterialToolbar
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/city_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/top_cities"
        android:background="@drawable/toolbar_background"
        app:titleTextColor="@color/lite_black"
        android:visibility="visible">
        <ImageView
            android:id="@+id/search_IV"
            android:layout_width="@dimen/ic_search_size"
            android:layout_height="@dimen/ic_search_size"
            android:src="@drawable/ic_search"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/margin_big"/>
    </com.google.android.material.appbar.MaterialToolbar>

    <com.google.android.material.appbar.MaterialToolbar
        android:visibility="gone"
        android:id="@+id/search_toolBar"
        android:background="@drawable/toolbar_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:navigationIcon="?attr/homeAsUpIndicator">
        <EditText
            android:id="@+id/et_search"
            android:hint="@string/search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/medium_margin"/>
    </com.google.android.material.appbar.MaterialToolbar>


    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/srl_top_cities"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/top_cities_RV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/top_cities_item"
        />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/city_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
        android:id="@+id/tv_city_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_big"
        android:text="@string/no_internet_connection"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>